# Lorris_updater

./: .gitmodules  CMakeLists.txt  Lorris_updater.sln  Lorris_updater.vcproj  Lorris_updater.vcxproj  README  changelog.cpp  changelog.h  download.cpp  download.h  main.cpp  mingw32-toolchain.cmake  mingw64-toolchain.cmake  resource.rc  ui.cpp  ui.h  updater.exe.manifest  work.cpp  work.h
signtool/: sha256.h  signtool.c  util.c  util.h  verify.c  verify.h
